# PromiseLink

./: .dockerignore  .env.basic.example  .env.poc.example  .env.poc.hosted.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EventLink_DevSquad_真实AI评审报告.md  EventLink_一页纸方案_给许总.md  EventLink_产品架构V2_数字名片整合方案.md  EventLink_产品设计讨论报告.md  EventLink_产品设计评审报告.md  EventLink_分工模型V2.1_修正版.md  EventLink_技术方案V3_技术版.md  EventLink_最终总结报告.md  LICENSE  QUICKSTART.md  README.en.md  README.jp.md  README.md  SECURITY.md  alembic.ini  docker-compose.basic.yml  docker-compose.hosted-poc.yml  docker-compose.poc.yml  docker-compose.prod.yml  docker-compose.yml  install-docker.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_devsquad_review.py  run_review.py  run_voice_review.py  run_voice_review_v2.py
.github/: CLA.md  cla-assistant.json
.github/workflows/: ci.yml  deploy-prod.yml
deliverables/product-strategy/: PromiseLink_竞品AI能力分析报告.md  article-wechat-draft-2026-06-11.md  brainstorm-ai-usecases-2026-06-11.md  open-source-risk-advisory-2026-06-12.md  pricing-tier-proposal-2026-06-11.md  trademark-domain-cost-advisory-2026-06-12.md
deploy/: quick_install.sh
docs/: DOCUMENTATION_CHECKLIST.md  NEXT_STEPS_推进计划_2026-06-08.md  PROJECT_STATUS.md  ROADMAP.md  ROADMAP_DECISIONS.md  STAGING_DEPLOYMENT_CHECKLIST.md  database_migration_rollback.md  基础版与专业版开发计划_v1.0.md  项目推进报告_2026-06-14.md
docs/architecture/: EventLink_技术设计_v1.md  Pro_Edition_Architecture.md  Pro_Edition_Security_Review_Phase0.md  Pro_Edition_Tech_Design_Phase0.md  PromiseLink_技术设计_v1.md  README.md  Repo_Split_Decision.md  edition_architecture.md
docs/deliverables/: PROJECT_STRUCTURE.md  README_SETUP.md
docs/design/: API_Design_v1.md  Algorithm_Design_v1.md  Competitive_Research_AgentReach_Cognee.md  Database_Design_v1.md  Deployment_Guide.md  E2E_Full_Coverage_Plan_2026-07-03.md  E2E_Strengthen_Plan.md  Integration_Design_v1.md  LLM_Prompt_Templates.md  Pro_Edition_Test_Plan_Phase0.md  PromiseLink_UX_Review_2026-07-05.md  README.md  Security_Design_v1.md  Security_Engine与审计.md  Security_LLM与AI输出.md  Security_威胁模型与全局.md  Security_小程序与WebView.md  Security_数据保护与主权.md  Security_认证与API.md  THREAT_MODEL.md  Test_Plan_v1.md  UI_Design_Gap_Analysis_2026-06-19.md  UI_Improvement_Proposal_2026-07-03.md  UI_Rectification_Plan_2026-07-03.md  UI_UX_Design_v1.md  scheduled_event_review.md
docs/evaluation/: PromiseLink_Project_Evaluation_2026-06-26.md  RELEASE_BLOCKERS_FIX_PLAN.md
docs/internal/: EventLink_DevSquad_真实AI评审报告.md  EventLink_MVP讨论_PM+架构师.md  EventLink_P1_客户视角评审报告.md  EventLink_P2_客户视角架构设计报告.md  EventLink_P2_架构设计_7角色评审报告.md  EventLink_PRD+技术设计_联合审阅报告_CarryMem.md  EventLink_PRD_v1.5_7角色评审报告.md  EventLink_PRD_v1.7_目标用户视角评审报告.md  EventLink_v4.2_v2.3_7角色全员Review报告.md  EventLink_v4.3_v2.4_二轮Review_最终报告.md  EventLink_定位演化与最终共识_2026-06-03.md  EventLink_文档更新v4.2_v2.3_全员Review会议材料.md  EventLink_李总v1.2_DevSquad_PM_Arch_评审报告.md  EventLink_李总反馈_PM+架构师.md  EventLink_李总反馈v2_PM+架构师.md  EventLink_李总资源匹配建议_审阅分析.md  EventLink_许总POC反馈_DevSquad_PM_Arch_评审报告.md  EventLink_许总POC反馈_DevSquad_PM_Arch_评审报告_真实版.md  PRD_v3.2_7角色审核报告.md  WorkBuddy审阅_7角色共识.md  定位校准_7角色共识.md  技术设计_v1.2_7角色审核报告.md  李总资源匹配建议_7角色共识.md
docs/legal/: AGPL_BOUNDARY.md  DMCA_TAKEDOWN_TEMPLATE.md  MPL_BOUNDARY.md  PRIVACY_POLICY.md  PRO_LICENSE_AGREEMENT.md  TERMS_OF_SERVICE.md
docs/planning/: 7Role_Critical_Review_2026-06-19.md  7Role_ReReview_Consensus_2026-06-18.md  7Role_Review_Consensus_2026-06-18.md  Pro_Edition_Implementation_Plan.md  Pro_Edition_Review_Report.md  会议待确认事项清单.md
docs/reports/: EventLink_POC准备度评估报告.md
docs/spec/: EventLink_名片数据接口规范_v1.md  P0_P1_FIX_PLAN_2026-07-05.md  PRD_P0P1增强规格_v1.md  PRD_Pro_Edition_v1.md  PRD_v1.md  PRD_v1_review_report.md  PRD_v1_非技术版.md  PRD_功能清单.md  PRD_变更记录.md  PRD_增强v2_公众号头脑风暴场景.md  PRD_数据设计.md  PRD_核心.md  PRD_用户问题评审共识_v1.md  PRD_用户问题评审共识_v2.md  README.md
docs/user_guide/: INSTALL_USER_GUIDE.md
frontend/: dev_server.py  package-lock.json  package.json  playwright.config.ts  playwright.staging.config.ts  project.config.json  spa_server.py  tsconfig.json
frontend/config/: index.ts  prod.ts
frontend/src/: app.config.ts  app.scss  app.tsx  index.html
frontend/types/: global.d.ts
gateway/: __init__.py  config.py  database.py  main.py  redis_client.py
gateway/api/: __init__.py
gateway/core/: __init__.py  error_codes.py  (+2 more)
monitoring/: README.md  alerts.yml  prometheus.yml
scripts/: backup-cron  backup.sh  collect_review_evidence.py  debug_batch.py  debug_brief.py  debug_brief_basic_info.py  demo_for_xu.py  deploy-staging.sh  e2e_acceptance.py  e2e_realistic_output.txt  e2e_realistic_scenario.py  e2e_sprint0_pipeline.py  e2e_user_journey.py  e2e_verify.py  extraction_report.py  install.sh  install_basic.sh  install_pro.sh  perf_benchmark.py  run_p1_prd.py  run_review_real_ai.py  run_review_v45.py  run_round2_review.py  security_check.py  start.sh  start_pro.sh  stress_test.py  test_batch_api.py  verify_batch.py
tests/: conftest.py  test_api_integration.py  test_association_discovery.py  test_concern_capability.py  test_config.py  test_context_matcher.py  test_coverage_boost.py  test_credit_score.py  test_crypto.py  test_dashboard_api.py  test_dashboard_api_extended.py  test_data_source_adapter.py  test_demand_input.py  test_dependency_analyzer.py  test_dormant_scanner.py  test_e2e_journey_supplement.py  test_e2e_real_user_scenarios.py  test_e2e_regression.py  test_email_adapter.py  test_entities_credit_api.py  test_entities_stages_api.py  test_entity_extractor.py  test_entity_resolution.py  test_event_correction_v56.py  test_event_pipeline.py  test_event_pipeline_api_coverage.py  test_event_recording_enhanced.py  test_events_correct.py  test_events_upload.py  test_exceptions.py  test_export_api.py  test_health_diagnostic.py  test_implicit_feedback.py  test_import_csv_api.py  test_input_scope_classifier.py  test_install_basic_flow.py  test_integration_full.py  test_integration_supplement.py  test_llm_client.py  test_llm_provider.py  (+55 more)
(+375 files in other folders)
