[project]
name = "promiselink"
version = "0.5.2"
description = "AI-driven personal business relationship management assistant (PromiseLink)"
authors = [{name = "CarryMem Team", email = "team@carrymem.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0"
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "httpx>=0.26.0",
    "networkx>=3.2.1",
    "rapidfuzz>=3.6.1",
    "numpy>=1.26.3",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["promiselink"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # line too long (handled by black formatter)
    "N801",   # invalid class name (Step01_VerifyEvent pattern is intentional)
    "N802",   # invalid function name (test functions use snake_case with test_ prefix)
    "N806",   # non-lowercase variable in function (UPPER_CASE constants in functions)
    "N818",   # error suffix on exception name (domain-specific naming)
    "E402",   # module import not at top (conditional imports for pro features)
    "E741",   # ambiguous variable name (l, I, O used in math contexts)
    "UP042",  # replace str-enum (Python 3.11 compatibility)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "F401"]  # test fixtures may have unused vars/imports
"alembic/*" = ["E402", "F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=promiselink --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
